# auth-service-rust

./: .env  .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/: CODEOWNERS
.github/workflows/: cd-infra.yml  cd-v2.yml  cd.yml  ci.yml  examples.yml  performance-scheduled.yml  rad.yml  scheduled-tests.yml  security-deps-audit.yml  security-scheduled.yml
.ops/terraform/: .terraform.lock.hcl  config.tf  main.tf  variables.tf  versions.tf
.zap/: rules.tsv
examples/basic/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
examples/basic/app/: Cargo.toml  Dockerfile
examples/basic/app/tests/: e2e.rs
examples/basic/src/: main.rs
migrations/: 20240420192800_create_user_table.up.sql  20240518072935_add_roles.down.sql  20240518072935_add_roles.up.sql  20240518094646_insert_auth_owner_role.down.sql  20240518094646_insert_auth_owner_role.up.sql  20240518205730_delete_init_role.down.sql  20240518205730_delete_init_role.up.sql  20240519074321_create_role_table.up.sql  20240724144622_add_name_to_user.down.sql  20240724144622_add_name_to_user.up.sql  20240726132557_add_avatar_url.down.sql  20241201133737_add_is_verified.down.sql  20241211215446_add_indexes.down.sql  20241211215446_add_indexes.up.sql
migrations/mysql/: 20240519074349_create_user_roles_table.down.sql  20240519074349_create_user_roles_table.up.sql  20240726132557_add_avatar_url.up.sql  20241201133737_add_is_verified.up.sql  20250114200631_create_session_table.up.sql  20250118140233_add_system_roles.down.sql  20250118140233_add_system_roles.up.sql  20250122145700_create_permissions_table.down.sql  20250122145700_create_permissions_table.up.sql  20251004091756_remove_session_table.down.sql  20251004091756_remove_session_table.up.sql
migrations/sqlite/: 20241231112418_init_sqlite_db.down.sql  20241231112418_init_sqlite_db.up.sql  20250114200634_create_session_table.up.sql  20250122145703_create_permissions_table.down.sql  20250122145703_create_permissions_table.up.sql  20251004091753_remove_session_table.down.sql
src/: lib.rs  main.rs
src/api/: acl_mw.rs  admin_session_controller.rs  admin_users_controller.rs  auth_controller.rs  axum_extractor.rs  axum_stateful_extractor.rs  axum_stateless_extractor.rs  dto.rs  health_controller.rs  mod.rs  restricted_controller.rs  routes.rs  security_mw.rs  server_state.rs  stateful_auth_controller.rs  stateless_auth_controller.rs  token_extractor.rs  user_controller.rs  utils.rs  utils_controller.rs
src/api/controller/: admin_permissions_controller.rs  admin_roles_controller.rs  admin_session_controller.rs  admin_users_controller.rs  auth_controller.rs  mod.rs  user_controller.rs  user_profile_controller.rs  utils_controller.rs
src/api/extractor/: auth_extractor.rs
src/api/middleware/: acl_mw.rs  mod.rs  security_mw.rs
src/api/response/: auth_response.rs  mod.rs  repository_response.rs
src/application/: app_configuration.rs  auth_service.rs  configuration.rs  configuration_types.rs  database_configuration.rs  message_publisher_configuration.rs  mod.rs  stateful_auth_service.rs  stateless_auth_service.rs
src/application/config/: app.rs  configuration.rs  database.rs  message_publisher.rs  mod.rs
src/application/configuration/: app.rs  composed.rs  configuration.rs  database.rs  dto.rs  message_publisher.rs  messaging.rs  mod.rs
src/cli/: cleanup_sessions.rs  mod.rs
src/domain/: crypto.rs  cryptography.rs  error.rs  event.rs  jwt.rs  mod.rs  permission.rs  policy.rs  repositories.rs  repository.rs  role.rs  session.rs  user.rs  user_repository.rs
src/infrastructure/: database.rs  dto.rs  message_consumer.rs  message_publisher.rs  mod.rs  mysql_permission_repository.rs  mysql_role_repository.rs  mysql_session_repository.rs  mysql_user_repository.rs  permission_repository.rs  rabbitmq_message_publisher.rs  repository.rs  role_repository.rs  s3_avatar_uploader.rs  sqlite_permission_repository.rs  sqlite_role_repository.rs  sqlite_session_repository.rs  sqlite_user_repository.rs  sqlx_user_repository.rs  user_repository.rs  utils.rs
tests/: lib.rs  utils.rs
tests/acceptance/: admin_roles_controller_test.rs  admin_session_controller_test.rs  auth_controller_test.rs  cli_test.rs  health_controller_test.rs  mod.rs  stateful_auth_controller_test.rs  stateless_auth_controller_test.rs  test_server.rs  users_controller_test.rs  utils.rs  utils_controller_test.rs
tests/integration/: message_publisher_test.rs  mod.rs  permission_repository_test.rs  rabbitmq_event_test.rs  rabbitmq_message_publisher_test.rs  role_repository_test.rs  session_repository_test.rs  sqlite_role_repository_test.rs  sqlite_user_repository_test.rs  user_repository_test.rs
tests/unit/: cryptography_test.rs  mod.rs  null_message_publisher_test.rs  permission_test.rs  policy_test.rs  role_test.rs  session_test.rs  user_test.rs
tests/utils/: cli.rs  config.rs  context.rs  db.rs  events.rs  mod.rs  runners.rs  server.rs
(+17 files in other folders)
