[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"
authors = ["Arkadiusz Krakowiak<arkadiusz.k.e@gmail.com>"]
description = "A simple authorization and authentication service"
license = "GPL-3"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["signal", "rt-multi-thread", "net"] }
tracing-subscriber = "0.3.18"
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
utoipa = "4.2.3"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "v7", "fast-rng", "macro-diagnostics", "serde"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "macros", "mysql", "migrate", "chrono", "uuid", "sqlite", "time"] }
dotenv = "0.15.0"
serde_json = "1.0.115"
tower-http = { version = "0.5.2", features = ["trace"] }
tower = { version = "0.4.1", features = ["util"] }
tracing = "0.1.40"
argon2 = "0.5.3"
lazy-regex = "3.1.0"
regex = "1.10.4"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }

[dev-dependencies]
assert_cmd = "2.0.14"
axum-test = "14.8.0"
predicates = "3.1.0"
