[package]
name = "auth-service"
version = "0.6.0"
edition = "2021"
authors = ["Arkadiusz Krakowiak<arkadiusz.k.e@gmail.com>"]
description = "A high-performance, event-driven authentication & authorization service written in Rust. This service provides robust user management and secure authentication flows."
license = "GPL-3"

[[bin]]
name = "app"
path = "src/bin/app.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sqlite = []
mysql = []

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["signal", "rt-multi-thread", "net"] }
tracing-subscriber = { version = "0.3.19", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.26", features = ["derive"] }
utoipa = { version = "5.3.1", features = ["uuid"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4", "v7", "fast-rng", "macro-diagnostics", "serde"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "macros", "mysql", "migrate", "chrono", "uuid", "sqlite", "time"] }
dotenvy = "0.15.7"
serde_json = "1.0.135"
tower-http = { version = "0.6.2", features = ["trace"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
argon2 = "0.6.0-pre.1"
lazy-regex = "3.4.1"
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"
utoipa-swagger-ui = { version = "8.1.1", features = ["axum"] }
lapin = "2.5.0"
futures-lite = "2.5.0"
async-trait = "0.1.85"

[dev-dependencies]
assert_cmd = "2.0.16"
axum-test = "17.0.1"
predicates = "3.1.3"
