[package]
name = "auth-service"
version = "0.16.0"
edition = "2024"
authors = ["Arkadiusz Krakowiak<arkadiusz.k.e@gmail.com>"]
description = "A high-performance, event-driven authentication & authorization service. This service provides robust user management and secure authentication flows."
license = "GPL-3"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[features]
sqlite = []
mysql = []

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["signal", "rt-multi-thread", "net"] }
tracing-subscriber = { version = "0.3.20", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.48", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["uuid", "chrono"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "v7", "fast-rng", "macro-diagnostics", "serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "mysql", "migrate", "chrono", "uuid", "sqlite", "time"] }
dotenvy = "0.15.7"
serde_json = "1.0.145"
tower-http = { version = "0.6.6", features = ["trace"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
argon2 = "0.6.0-rc.1"
lazy-regex = "3.4.1"
bcrypt = "0.17.1"
jsonwebtoken = "9.3.1"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
lapin = "4.0.0-rc.1"
futures-lite = "2.6.1"
async-trait = "0.1.89"

[dev-dependencies]
assert_cmd = "2.0.17"
axum-test = "18.1.0"
predicates = "3.1.3"
